--- a/BlazorChatAPI/appsettings.json
+++ b/BlazorChatAPI/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": { // password in %APPDATA%\Microsoft\UserSecrets\
     "DefaultConnection": "Host=localhost;Database=BlazorChat;Username=postgres"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "AllowedOrigins": [
+      "https://localhost:8080",
+      "http://localhost:8081"
+    ]
 }
