--- a/BlazorChatWeb/wwwroot/appsettings.json
+++ b/BlazorChatWeb/wwwroot/appsettings.json
@@ -1,3 +1,4 @@
 ﻿{
-  "ApiBaseUrl": "https://localhost:7199/"
+  "ApiBaseUrl": "http://localhost:8080/",
+  "SignalRHubUrl": "http://localhost:8080/chathub"
 }
