--- a/BlazorChatAPI/appsettings.Development.json
+++ b/BlazorChatAPI/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "AllowedOrigins": [
+    "https://localhost:7081",
+    "http://localhost:5037"
+  ]
 }
